--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 /* this file will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 @import 'variables';
+@import '~bootstrap/scss/bootstrap.scss';
 
 nav {
   margin-top: 16px;
