--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,19 +2,7 @@
 /* This file is for setting global styles  */
 @import 'variables';
 @import '~bootstrap/scss/bootstrap.scss';
-
-nav {
-  margin-top: 16px;
-}
-
-nav a {
-  background-color: $nav-button-color;
-  color: white;
-  padding: 8px 16px;
-  margin: 8px;
-  vertical-align: middle;
-  line-height: 1.25;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 4px;
+body {
+  background: no-repeat url("../assets/img/Background_2.png");
+  background-size: cover;
 }
