--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,30 @@
-html, body{
+html, body {
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif
+  background: no-repeat url("../assets/img/Background_2.png");
+  /*TODO: Add polyfill to background-size:cover property*/
+  background-size: cover;
 }
 
-a.active {
-  background-color: gray;
+header {
+  min-height: 50px;
+  max-height: 50px;
+  height: 50px;
+}
+
+  header nav {
+    min-height: inherit !important;
+    max-height: inherit !important;
+    height: inherit !important;
+  }
+
+#homeTxt {
+  height: 100%;
+  padding: 16px 0;
+  font-weight: bold !important;
+  font-size: 18px !important;
+}
+
+#mainContainer {
+  width: 100%;
+  height: calc(100% - 50px);
 }
