--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,11 @@
 /* this file will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
+@import 'fonts';
 @import 'variables';
+@import 'boostrap_variables';
 @import '~bootstrap/scss/bootstrap.scss';
-body {
-  background: no-repeat url("../assets/img/Background_2.png");
-  background-size: cover;
+
+.page-container {
+  max-width: $page-container-max-width !important;
+  margin: 0 auto !important;
 }
