Boostrap added. Organized styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <nav class="navbar navbar-dark bg-dark page-container">
     <a class="navbar-brand" href="#">
       <img src="../assets/img/pokeball.png" class="d-inline-block align-center" alt="Pokeball icon">
-      <span id="homeTxt">
+      <span id="nav-title">
         POK&Eacute;DEX
       </span>
     </a>
   </nav>
 </header>
-<main id="mainContainer">
+<main class="page-container">
   <router-outlet></router-outlet>
 </main>
