--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<section class="page-container pokedex-list-container container bg-white"></section>
+<section class="home-container container bg-white row">
+  <div class="col">
+    <h1 id="home-title text-black" style="font-weight: bold !important;">POK&Eacute;DEX</h1>
+  </div>
+  <div id="home-poke-list-container">
+  </div>
+  <div class="home-btn-load-more-wrapper">
+    <button class="btn">Load More</button>
+  </div>
+</section>
