--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="bg-dark">
-  <nav class="navbar navbar-dark bg-dark page-container">
+  <nav class="navbar navbar-dark bg-dark page-container container">
     <a class="navbar-brand" href="#">
       <img src="../assets/img/pokeball.png" class="d-inline-block align-center" alt="Pokeball icon">
       <span id="nav-title">
@@ -8,6 +8,6 @@
     </a>
   </nav>
 </header>
-<main class="page-container">
+<main class="">
   <router-outlet></router-outlet>
 </main>
