--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,7 @@
+@import 'colors';
+$page-container-max-width: 1024px !default;
 
+$app-header-width: 50px !default;
+$app-header-height: 50px !default;
+
+$body-bck-image-path: "../assets/img/Background_2.png";
