--- a/src/styles/_boostrap_variables.scss
+++ b/src/styles/_boostrap_variables.scss
@@ -4,4 +4,7 @@
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-monserrat: Montserrat;
+$font-family-din-alternate: DIN_Alternate;
+$default-family-sans-serif-boostrap: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif: $font-family-monserrat, $default-family-sans-serif-boostrap;
