--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,21 @@
 /* this file will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 @import 'fonts';
-@import 'variables';
+@import 'colors';
 @import 'boostrap_variables';
 @import '~bootstrap/scss/bootstrap.scss';
 
+.btn {
+  font-family: $font-family-din-alternate, $default-family-sans-serif-boostrap !important;
+  min-height: 40px;
+  max-height: 40px;
+  height: 40px;
+
+  .btn-primary {
+    background-color: $poke-blue;
+  }
+
+  .btn-secondary {
+    background-color: $poke-orange;
+  }
+}
