--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,7 +1,7 @@
 <div class="col col-sm-3 col-md-4 pokemon-short-element-container" (click)="onShowDetails()">
   <h2 class="title">#{{model.zeros()}} <span class="font-weight-bold">{{model.name}}</span></h2>
   <div class="image-container text-center">
-    <img [src]="state === 'loading' ? '../assets/img/loading.png' : model.image()" />
+    <span class="middle-helper"></span><img [src]="state === 'loading' ? '../assets/img/loading.png' : model.image()" />
   </div>
   <div class="types text-center {{type.name}}" *ngFor="let type of model.types">
     {{type.name}}
