--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables';
 @import '../../styles/utils';
 
+
 .pokemon-short-element-container {
   $border-radius-card: 7.5px;
   $title-margin-top-size: 6px;
@@ -8,7 +9,8 @@
   $card-width: 216px;
   $card-height: 238px;
   $types-height: 22px;
-
+  position: relative;
+  display: block;
   background-color: #{$poke-dark-1};
   margin: 0 !important;
   margin-right: 13px !important;
@@ -24,6 +26,11 @@
     cursor: pointer;
   }
 
+  &.loading:hover {
+    cursor: wait !important;
+  }
+
+
   .title {
     padding: #{$title-margin-top-size} 0 0 6px;
     margin: 0;
@@ -34,65 +41,5 @@
 
   &:nth-child(4n) {
     margin-right: 0 !important;
-  }
-
-  .image-container {
-    $width-img-container: calc(100% - (#{$title-margin-top-size} + #{$title-font-size} + #{$types-height}) );
-    max-width: 100%;
-    min-width: 100%;
-    width: 100%;
-    height: calc(100% - (#{$title-margin-top-size} + #{$title-font-size} + #{$types-height}));
-
-    img {
-      margin: 0 auto;
-      max-width: $width-img-container;
-      min-width: $width-img-container;
-      width: $width-img-container;
-      height: auto !important;
-    }
-  }
-
-  .types {
-    height: $types-height;
-    display: inline-block;
-    width: 50%;
-    text-transform: uppercase;
-    font-size: .7rem;
-    float: right;
-    border-top-left-radius: $border-radius-card;
-    border-bottom-right-radius: $border-radius-card;
-
-    @include random_rgb_background_color();
-
-    &.grass {
-      background-color: $poke-green;
-    }
-
-    &.poison {
-      background-color: $poke-purple;
-    }
-
-    &.fire {
-      background-color: $poke-orange;
-    }
-
-    &.flying {
-      background-color: $poke-dark-2;
-    }
-
-    &.water {
-      background-color: $poke-blue;
-    }
-
-    &.bug {
-      background-color: $poke-green;
-    }
-
-    &:nth-child(2n) {
-      float: left;
-      border-radius: unset;
-      border-bottom-left-radius: $border-radius-card;
-      border-top-right-radius: $border-radius-card;
-    }
   }
 }
