--- a/src/app/pokemon/child-detail/child-detail.component.scss
+++ b/src/app/pokemon/child-detail/child-detail.component.scss
@@ -4,138 +4,25 @@
 .pokemon-detail-container {
   padding: 0 0 54px 32px;
 
-  col {
+  .col {
     padding: 0;
   }
 
   #pokemon-detail-title {
-    margin-bottom: 54px;
+    margin-bottom: 32px;
+    clear: both;
   }
 
-  pokemon {
-    .poke-image-types-component {
-      $border-radius-card: 7.5px;
-      $card-width: 496px;
-      $card-height: 245px;
-      $types-height: 50px;
 
-      width: $card-width;
-      height: $card-height;
-
-      .image-container {
-        $width-img-container: calc(100% - #{$types-height} );
-        height: $width-img-container !important;
-
-        img {
-          max-width: $width-img-container;
-          min-width: $width-img-container;
-          width: $width-img-container;
-        }
-      }
-
-      .types {
-        height: $types-height;
-        font-size: .7rem;
-        border-top-left-radius: $border-radius-card;
-        border-bottom-right-radius: $border-radius-card;
-
-        &:nth-child(2n) {
-          border-bottom-left-radius: $border-radius-card;
-          border-top-right-radius: $border-radius-card;
-        }
-      }
-    }
-  }
-
-  .pokemon-list-container {
-    width: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
-
-    .pokemon-detail-short {
-      $border-radius-card: 7.5px;
-      $title-margin-top-size: 6px;
-      $title-font-size: 1rem;
-      $card-width: 216px;
-      $card-height: 238px;
-      $types-height: 22px;
-
-      &:hover {
-        cursor: pointer;
-      }
-
-      background-color: #{$poke-dark-1};
-      margin: 0 !important;
-      margin-right: 13px !important;
-      margin-bottom: 60px !important;
-      padding: 0 !important;
-      border-radius: #{$border-radius-card} !important;
-      width: #{$card-width};
-      max-width: #{$card-width};
-      max-height: $card-height;
-
-      .title {
-        margin: #{$title-margin-top-size} 0 0 6px;
-        font-size: #{$title-font-size} !important;
-        text-transform: capitalize;
-      }
-
-      &:nth-child(4n) {
-        margin-right: 0 !important;
-      }
-
-      .image-container {
-        img {
-          //Substract the margin top of the title, its content size and the height of the abilities boxes
-          width: calc(100% - #{$title-margin-top-size} - #{$title-font-size} - #{$types-height}) !important;
-          height: auto !important;
-        }
-      }
-
-      .types {
-        height: $types-height;
-        display: inline-block;
-        width: 50%;
-        text-transform: uppercase;
-        font-size: .7rem;
-        float: right;
-        border-top-left-radius: $border-radius-card;
-        border-bottom-right-radius: $border-radius-card;
-
-        @include random_rgb_background_color();
-
-        &.grass {
-          background-color: $poke-green;
-        }
-
-        &.poison {
-          background-color: $poke-purple;
-        }
-
-        &.fire {
-          background-color: $poke-orange;
-        }
-
-        &.flying {
-          background-color: $poke-dark-2;
-        }
-
-        &.water {
-          background-color: $poke-blue;
-        }
-
-        &.bug {
-          background-color: $poke-green;
-        }
-
-        &:nth-child(2n) {
-          float: left;
-          border-radius: unset;
-          border-bottom-left-radius: $border-radius-card;
-          border-top-right-radius: $border-radius-card;
-        }
-      }
-    }
+  .custom-pokemon-image-size {
+    display: block;
+    position: relative;
+    $card-width: 510px;
+    $card-height: 496px;
+    $types-height: 50px;
+    outline: 1px red solid;
+    width: $card-width !important;
+    height: $card-height !important;
   }
 
   .pokemon-btn-explore-more-wrapper {
