--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ html, body {
   background-size: cover;
 }
 
-header {
+header.main-nav {
   min-height: $app-header-width;
   max-height: $app-header-height;
   height: $app-header-width;
