--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,7 +1,7 @@
 //Gray
 $poke-dark-1: #F2F1F1 !default;
 $poke-dark-2: #D8D8D8 !default;
-$poke-dark-3: #606C78 cdefault;
+$poke-dark-3: #606C78 !default;
 $poke-dark-4: #1F2532 !default;
 
 $poke-clear: $poke-dark-1 !default;
