--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="bg-dark">
+<header class="bg-dark main-nav">
   <nav class="navbar navbar-dark bg-dark page-container container">
     <a class="navbar-brand" href="#">
       <img src="../assets/img/pokeball.png" class="d-inline-block align-center" alt="Pokeball icon">
