Latest stable version

--- a/src/app/pokemon/child-detail/child-detail.component.html
+++ b/src/app/pokemon/child-detail/child-detail.component.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="pokemon-btn-explore-more-wrapper text-center">
-      <button class="btn">EXPLORE MORE POK&Eacute;MON</button>
+      <button class="btn" (click)="goToHome()">EXPLORE MORE POK&Eacute;MON</button>
     </div>
   </main>
 </section>
