--- a/src/app/pokemon/pokemon-image/pokemon-image.component.html
+++ b/src/app/pokemon/pokemon-image/pokemon-image.component.html
@@ -1,5 +1,5 @@
-<div class="poke-image-types-component">
-  <div class="image-container text-center">
+<div class="poke-image-types-component {{showLoading? 'loading' : ''}}">
+  <div class="image-container text-center ">
     <img [src]="showLoading ? '../assets/img/loading.png' : model.image()" />
   </div>
   <div class="types text-center {{type.name}}" *ngFor="let type of model.types">
