--- a/src/app/pokemon/child-detail/child-detail.component.scss
+++ b/src/app/pokemon/child-detail/child-detail.component.scss
@@ -88,6 +88,7 @@
         .base-stats {
           background-color: $poke-dark-2;
           padding: 42px 24px;
+          border-radius: 7.5px;
 
           .meter-v {
             width: 56px;
